--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,6 @@
   "bugs": {
     "url": "https://github.com/Dustinm5Oly/Team-Keeper/issues"
   },
-  "homepage": "https://github.com/Dustinm5Oly/Team-Keeper#readme"
+  "homepage": "https://github.com/Dustinm5Oly/Team-Keeper#readme",
+  "devDependencies": {}
 }
